--- a/getStarted/package.json
+++ b/getStarted/package.json
@@ -61,6 +61,8 @@
         "yargs": "^13.2.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.30",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "smart-grid": "^2.1.2"
     }
 }
